Set java version to 8, refactoring